# control_accesso

./: isc vs serie
circuito/poncho_cc2541/: fp-lib-table  poncho_cc2541-cache.lib  poncho_cc2541.kicad_pcb  poncho_cc2541.net  poncho_cc2541.pro  poncho_cc2541.sch
circuito/poncho_cc2541/HM-10 librarie/: fp-lib-table  hm-10.lib
circuito/poncho_cc2541/HM-10.pretty/: Conn_Poncho_Chico.kicad_mod  HM-10.kicad_mod
circuito/poncho_nrf51822/: _autosave-poncho_nrf51822.kicad_pcb  poncho_nrf51822-cache.lib  poncho_nrf51822.kicad_pcb  poncho_nrf51822.lib  poncho_nrf51822.net  poncho_nrf51822.pro  poncho_nrf51822.sch
circuito/poncho_nrf51822/footprints.pretty/: C_0805_HandSoldering.kicad_mod  Conn_Poncho_Chico.kicad_mod  LED_D5.0mm.kicad_mod  Pin_Header_Straight_1x03_Pitch2.54mm.kicad_mod  Pin_Header_Straight_1x18_Pitch2.54mm.kicad_mod  Pin_Header_Straight_2x01_Pitch2.54mm.kicad_mod  Pin_Header_Straight_2x05_Pitch2.54mm.kicad_mod  Plantilla_EDU-CIAA.kicad_mod  R_0805_HandSoldering.kicad_mod  SW_PUSH_6mm.kicad_mod  yunjia_nrf51822.kicad_mod
circuito/poncho_nrf51822/gerber/: poncho_nrf51822-B.Cu.gbr  poncho_nrf51822-Edge.Cuts.gbr  poncho_nrf51822-F.Cu.gbr  poncho_nrf51822.drl
codigo/: .gitignore  CMakeLists.txt
codigo/.piolibdeps/ble-nrf51822_ID378/: .library.json
codigo/.piolibdeps/ble_ID296/: .library.json
codigo/.piolibdeps/ble_ID296/source/: BLE.cpp
codigo/.piolibdeps/nrf51-sdk_ID328/: .library.json
codigo/edu-CIAA/.metadata/: version.ini
codigo/edu-CIAA/.metadata/.plugins/org.eclipse.cdt.dsf.ui/: dialog_settings.xml
codigo/edu-CIAA/.metadata/.plugins/org.eclipse.core.resources/: 1.snap  2.snap
codigo/edu-CIAA/.metadata/.plugins/org.eclipse.core.resources/.projects/firmware/: .markers  .markers.snap
codigo/edu-CIAA/.metadata/.plugins/org.eclipse.core.resources/.projects/firmware/.indexes/: history.index  properties.index
codigo/edu-CIAA/.metadata/.plugins/org.eclipse.core.resources/.root/: .markers.snap  1.tree  2.tree
codigo/edu-CIAA/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
codigo/edu-CIAA/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
codigo/edu-CIAA/.metadata/.plugins/org.eclipse.debug.core/.launches/: firmware.launch
codigo/edu-CIAA/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
codigo/edu-CIAA/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
codigo/edu-CIAA/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
codigo/edu-CIAA/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
codigo/edu-CIAA/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
codigo/edu-CIAA/firmware/: .cproject  .gitignore  .project  CMakeLists.txt  project.mk
codigo/edu-CIAA/firmware/control/inc/: Beacon.h  BeaconManager.h  CmdManager.h  Eeprom.h  Heap.h  Print.h  main.h  print.h  sapi_adc.h  sapi_board.h  sapi_delay.h  sapi_gpio.h  sapi_peripheral_map.h  sapi_rtc.h  sapi_uart.h  uart.h
codigo/edu-CIAA/firmware/control/src/: Beacon.c  BeaconManager.c  CmdManager.c  Eeprom.c  Heap.c  Print.c  Uart.c  heap.c  main.c  print.c  sapi_adc.c  sapi_board.c  sapi_datatypes.c  sapi_delay.c  sapi_gpio.c  sapi_rtc.c  sapi_uart.c  uart.c
codigo/edu-CIAA/firmware/examples/tcpecho/inc/: FreeRTOSConfig.h
codigo/edu-CIAA/firmware/modules/lpc1769/freertos/inc/: FreeRTOS.h
codigo/edu-CIAA/firmware/modules/lpc4337_m4/freertos/inc/: FreeRTOS.h
codigo/edu-CIAA/firmware/modules/lpc4337_m4/sapi/inc/: sapi_uart.h
codigo/edu-CIAA/firmware/modules/lpc4337_m4/sapi/src/: sapi_uart.c
codigo/edu-CIAA/firmware/sapi_examples/edu-ciaa-nxp/sapi_uart_01_echo/src/: uart.c
codigo/nrf51822/: .gitignore  .travis.yml  CMakeLists.txt  instrucciones  platformio.ini
codigo/nrf51822/examples/: hrm.cpp  ibeacon_broadcaster.cpp
codigo/nrf51822/src/: Beacon.h  IBeaconAdvPackageData.h  main.cpp
codigo/pc/control-acceso-pc/: build.gradle
codigo/pc/control-acceso-pc/src/main/kotlin/access_control/app/: BufferUntil.kt  Controller.kt  MainApp.kt  MainView.kt  (+3 more)
codigo/src/: main.cpp
(+24 files in other folders)
